# Muffin

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
tests/: test_testrail_client.py
